==> microcai/framework-N32sdk/N32G430/examples/USART/SmartCard/src/smartcard.c <==
#include <stdio.h>
#include <stdlib.h>
#include "smartcard.h"
#include <string.h>
#include "log.h"
#include "delay.h"
#include "main.h"

static void SC_Init(SC_InitStructure *SC_InitCfg)
{
    GPIO_InitType GPIO_InitStructure;
    USART_InitType USART_InitStructure;
    USART_ClockInitType USART_ClockInitStructure;
    RCC_ClocksType RCC_ClocksStatus;
    /* Enable GPIO clocks */
    RCC_AHB_Peripheral_Clock_Enable(SC_USART_GPIO_CLK | SC_PIN_RESET_GPIO_CLK);
    /* Enable USART clock */
    SC_USART_APBxClkCmd(SC_USART_CLK);
    /* Initialize GPIO_InitStructure */
    GPIO_Structure_Initialize(&GPIO_InitStructure);
    /* Configure USART CK pin as alternate function push-pull */
    GPIO_InitStructure.Pin              = SC_USART_PIN_CK;
    GPIO_InitStructure.GPIO_Mode        = GPIO_MODE_AF_PP;
    GPIO_InitStructure.GPIO_Alternate   = SC_USART_Clk_GPIO_AF;
    GPIO_InitStructure.GPIO_Current =  GPIO_DS_12MA;
    GPIO_Peripheral_Initialize(SC_USART_GPIO, &GPIO_InitStructure);
    /* Configure USART Tx pin as alternate function open-drain */
    GPIO_InitStructure.Pin              = SC_USART_PIN_TX;
    GPIO_InitStructure.GPIO_Mode        = GPIO_MODE_AF_OD;
    GPIO_InitStructure.GPIO_Alternate   = SC_USART_Tx_GPIO_AF;
    GPIO_InitStructure.GPIO_Current =  GPIO_DS_12MA;
    GPIO_Peripheral_Initialize(SC_USART_GPIO, &GPIO_InitStructure);
    /* Configure Smartcard Reset pin */
    GPIO_InitStructure.Pin = SC_PIN_RESET;
    GPIO_InitStructure.GPIO_Mode = GPIO_MODE_OUT_PP;
    GPIO_Peripheral_Initialize(SC_PIN_RESET_GPIO, &GPIO_InitStructure);
    /* SC_USART configuration ----------------------------------------------------*/
    /* SC_USART configured as follow:
        - Word Length = 9 Bits
        - 0.5 Stop Bit
        - Even parity
        - BaudRate = 9677 baud
        - Hardware flow control disabled (RTS and CTS signals)
        - Tx and Rx enabled
        - USART Clock enabled
    */
    /* SC_USART Clock set to 2.7MHz (PCLK1 = 27 MHZ / 10) */
    USART_Prescaler_Set(SC_USART, SC_InitCfg->Clk_Div >> 1);
    /* USART Guard Time set to 16 Bit */
    USART_Guard_Time_Set(SC_USART, SC_InitCfg->GT);
    USART_Clock_Structure_Initializes(&USART_ClockInitStructure);
    USART_ClockInitStructure.Clock      = USART_CLK_ENABLE;
    USART_ClockInitStructure.Polarity   = USART_CLKPOL_LOW;
    USART_ClockInitStructure.Phase      = USART_CLKPHA_1EDGE;
    USART_ClockInitStructure.LastBit    = USART_CLKLB_ENABLE;
    USART_Clock_Initializes(SC_USART, &USART_ClockInitStructure);
    RCC_Clocks_Frequencies_Value_Get(&RCC_ClocksStatus);
    USART_Structure_Initializes(&USART_InitStructure);    
    USART_InitStructure.BaudRate = RCC_ClocksStatus.Pclk1Freq / (372 * ((SC_USART->GTP & (uint16_t)0x00FF) * 2));
    log_info(" Pclk1 =%d,Clk_Div = %d,bps =%d\r\n", RCC_ClocksStatus.Pclk1Freq, (372 * ((SC_USART->GTP & (uint16_t)0x00FF) *2)),USART_InitStructure.BaudRate);
    USART_InitStructure.WordLength = USART_WL_9B;
    if(SC_InitCfg->StopBits == 1)
    {
        USART_InitStructure.StopBits = USART_STPB_0_5;
    }
    else if(SC_InitCfg->StopBits == 3)
    {
        USART_InitStructure.StopBits = USART_STPB_1_5;
    }
    else
    {
        log_info("\r\n StopBits value is error !!! \r\n");
    }
    if(SC_InitCfg->Parity == 1)
    {
        USART_InitStructure.Parity = USART_PE_EVEN;
    }
    else if(SC_InitCfg->Parity == 2)
    {
        USART_InitStructure.Parity = USART_PE_ODD;
    }
    else
    {
        log_info("\r\n Parity value is error !!! \r\n");
    }
    USART_InitStructure.Mode                  = USART_MODE_RX | USART_MODE_TX;
    USART_InitStructure.HardwareFlowControl   = USART_HFCTRL_NONE;
    USART_Initializes(SC_USART, &USART_InitStructure);
    /* Enable the SC_USART Parity Error Interrupt */
    USART_Interrput_Enable(SC_USART, USART_INT_PEF);
    /* Enable the SC_USART Framing Error Interrupt */
    USART_Interrput_Enable(SC_USART, USART_INT_ERRF);
    /* Enable SC_USART */
    USART_Enable(SC_USART);
    /* Enable the NACK Transmission */
    if(SC_InitCfg->NackEn == 0)
    {
        USART_Smart_Card_NACK_Disable(SC_USART);
    }
    else if(SC_InitCfg->NackEn == 1)
    {
        USART_Smart_Card_NACK_Enable(SC_USART);
    }
    else
    {
        log_info("\r\n NACK Enable value is error !!! \r\n");
    }
    /* Enable the Smartcard Interface */
    USART_Smart_Card_Enable(SC_USART);
    /* Set RSTIN HIGH */
    SC_Reset(Bit_SET);
}

void SC_DeInit(void)
{
    /* Deinitializes the SC_USART */
    USART_Reset(SC_USART);
    GPIO_Reset(SC_PIN_RESET_GPIO);
    /* Disable GPIO clocks */
    RCC_APB2_Peripheral_Clock_Disable(SC_USART_GPIO_CLK);
    RCC_AHB_Peripheral_Clock_Disable(SC_PIN_RESET_GPIO_CLK);
    /* Disable SC_USART clock */
    SC_USART_APBxClkCmd(SC_USART_CLK);
}

void SC_Reset(Bit_OperateType ResetState)
{
    if(ResetState)
    {
        GPIO_Pins_Set(SC_PIN_RESET_GPIO, SC_PIN_RESET);
    }
    else
    {
        GPIO_Pins_Reset(SC_PIN_RESET_GPIO, SC_PIN_RESET);
    }
}

void SC_ParityErrorHandler(void)
{
    USART_Data_Send(SC_USART, SCData);
    while(USART_Flag_Status_Get(SC_USART, USART_FLAG_TXC) == RESET)
    {
    }
}

void SC_PTSConfig(void)
{
    RCC_ClocksType RCC_ClocksStatus;
    uint32_t workingbaudrate = 0, apbclock = 0;
    uint8_t TxBuffer1[4] = {0};
    uint8_t RxBuffer1[4] = {0};
    USART_InitType USART_InitStructure;
    USART_ClockInitType USART_ClockInitStructure;
    /* Reconfigure the USART Baud Rate -------------------------------------------*/
    RCC_Clocks_Frequencies_Value_Get(&RCC_ClocksStatus);
    apbclock = RCC_ClocksStatus.Pclk1Freq;
    apbclock /= ((SC_USART->GTP & (uint16_t)0x00FF) * 2);
    /* Enable the DMA Receive (Set DMAR bit only) to enable interrupt generation
    in case of a framing error FE */

    if((SC_A2R.T0 & (uint8_t)0x10) == 0x10)
    {
        if(SC_A2R.T[0] != 0x11)
        {
//            /* Send PPSS */
            TxBuffer1[0] = 0xFF;
//            /* Send PPS0 */
            TxBuffer1[1] = 0x10;
//            /* PPS1~3  */
            TxBuffer1[2] = SC_A2R.T[0];
//            /* PCK */
            TxBuffer1[3] = (uint8_t)0xFF ^ (uint8_t)0x10 ^ (uint8_t)SC_A2R.T[0];
            DMA_Configuration(TxBuffer1, 4, RxBuffer1, 4);            
            /* Enable USARTy DMA Rx and TX request */
            USART_DMA_Transfer_Enable(SC_USART, USART_DMAREQ_RX | USART_DMAREQ_TX);

            /* Enable USARTy TX DMA1 Channel */
            DMA_Channel_Enable(SC_USART_Tx_DMA_Channel);
            /* Enable USARTy RX DMA1 Channel */
            DMA_Channel_Enable(SC_USART_Rx_DMA_Channel);

            /* Wait until USARTy TX DMA1 Channel Transfer Complete */
            while (DMA_Flag_Status_Get(SC_USART_DMAx, SC_USART_Tx_DMA_FLAG) == RESET)
            {
            }
            DMA_Flag_Status_Clear(SC_USART_DMAx, SC_USART_Tx_DMA_FLAG);
            /* Wait until USARTy RX DMA1 Channel Transfer Complete */
            while (DMA_Flag_Status_Get(SC_USART_DMAx, SC_USART_Rx_DMA_FLAG) == RESET)
            {
            }            
            DMA_Flag_Status_Clear(SC_USART_DMAx, SC_USART_Rx_DMA_FLAG);
            log_info(" locData =%02x %02x %02x %02x\r\n", RxBuffer1[0],RxBuffer1[1],RxBuffer1[2],RxBuffer1[3]);

            /* DISABLE USARTy DMA Rx and TX request */
            USART_DMA_Transfer_Enable(SC_USART, USART_DMAREQ_RX | USART_DMAREQ_TX);

            /* DISABLE USARTy TX DMA1 Channel */
            DMA_Channel_Disable(SC_USART_Tx_DMA_Channel);
            /* DISABLE USARTy RX DMA1 Channel */
            DMA_Channel_Disable(SC_USART_Rx_DMA_Channel);
            
            if(Buffercmp(TxBuffer1, RxBuffer1, 4) == 0x01)
            {
                log_info(" PTS Confirm success\r\n");
                /* DISABLE SC_USART */
                USART_Enable(SC_USART);
                workingbaudrate = apbclock * D_Table[(SC_A2R.T[0] & (uint8_t)0x0F)];
                workingbaudrate /= F_Table[((SC_A2R.T[0] >> 4) & (uint8_t)0x0F)];
                USART_ClockInitStructure.Clock          = USART_CLK_ENABLE;
                USART_ClockInitStructure.Polarity       = USART_CLKPOL_LOW;
                USART_ClockInitStructure.Phase          = USART_CLKPHA_1EDGE;
                USART_ClockInitStructure.LastBit        = USART_CLKLB_ENABLE;
                USART_Clock_Initializes(SC_USART, &USART_ClockInitStructure);
                log_info(" bps =%d\r\n", workingbaudrate);
                USART_InitStructure.BaudRate            = workingbaudrate;
                USART_InitStructure.WordLength          = USART_WL_9B;
                USART_InitStructure.StopBits            = USART_STPB_1_5;
                USART_InitStructure.Parity              = USART_PE_EVEN;
                USART_InitStructure.Mode                = USART_MODE_RX | USART_MODE_TX;
                USART_InitStructure.HardwareFlowControl = USART_HFCTRL_NONE;
                USART_Initializes(SC_USART, &USART_InitStructure);
                log_info(" Pclk1 =%d,apbclock = %d,bps =%d\r\n", RCC_ClocksStatus.Pclk1Freq, apbclock,USART_InitStructure.BaudRate);
                /* Enable SC_USART */
                USART_Enable(SC_USART);
            }
            else
            {
                log_info(" PTS Confirm fail,HotReset\r\n");
                SC__HotReset_handle();
            }
                
        }   
    }    
}

static void SC_AnswerReq(SC_State *SCState, uint8_t *card, uint8_t length)
{
    uint8_t Data = 0;
    uint32_t i = 0;
    uint32_t number = 0;
//    log_info("SC_AnswerReq *SCState = %d \r\n", *SCState);
    SC_USART->CTRL1 &= ~USART_WL_9B;
    switch(*SCState)
    {
        case SC_RESET_LOW:
            //log_info(" SC_RESET_LOW\r\n");
            /* Check responce with reset low ------------------------------------- */
            while(i < (length))
            {
                i++;
                if((USART_ByteReceive(&Data, SC_RECEIVE_TIMEOUT)) == SUCCESS)
                {
                    card[number] = Data;
                    number++;
                    //log_info(" SC_AnswerReq SC_RESET_LOW Rece success card[%d] = %02x\r\n",i,card[i]);
                }
            }
            if(card[0])
            {
                (*SCState) = SC_ACTIVE;
                SC_Reset(Bit_SET);/* Reset High */
            }
            else
            {
                (*SCState) = SC_RESET_HIGH;
            }
            break;
        case SC_RESET_HIGH:
            //log_info(" SC_RESET_HIGH\r\n");
            /* Check responce with reset high --------------------------------------*/
            SC_Reset(Bit_SET); /* Reset High */
            while(i < length )
            {
                i++;
                if((USART_ByteReceive(&Data, SC_RECEIVE_TIMEOUT)) == SUCCESS)
                {
                    card[number] = Data;
                    number++;
                    //log_info(" SC_AnswerReq SC_RESET_LOW Rece success card[%d] = %02x\r\n",i,card[i]);
                }
            }

            if(card[0])
            {
                (*SCState) = SC_ACTIVE;
            }
            else
            {
                (*SCState) = SC_POWER_OFF;
            }
            break;
        case SC_ACTIVE:
    //        log_info(" SC_ACTIVE\r\n");
            break;
        case SC_POWER_OFF:
    //        log_info(" SC_POWER_OFF\r\n");
            /* Close Connection if no answer received ------------------------------*/
            SC_Reset(Bit_SET); /* Reset high - a bit is used as level shifter from 3.3 to 5 V */
            break;
        default:
            (*SCState) = SC_RESET_LOW;
    }
    SC_USART->CTRL1 |= USART_WL_9B;

}

static ErrorStatus USART_ByteReceive(uint8_t *Data, uint32_t TimeOut)
{
    uint32_t Counter = 0;
    while((USART_Flag_Status_Get(SC_USART, USART_FLAG_RXDNE) == RESET) && (Counter != TimeOut))
    {
        Counter++;
        /* Overflow data loss */
        if(USART_Flag_Status_Get(SC_USART, USART_FLAG_OREF) != RESET)
        {
            SC_USART->DAT;
        }
    }
    if(Counter != TimeOut)
    {
        *Data = (uint8_t)USART_Data_Receive(SC_USART);
        return SUCCESS;
    }
    else
    {
        return ERROR;
    }
}

void SC_Handler(SC_State *SCState, SC_ADPU_Commands *SC_ADPU, SC_ADPU_Responce *SC_Response, SC_InitStructure *SC_InitCfg)
{
    uint32_t i = 0;
//    log_info("*SCState = %d \r\n", *SCState);
    switch(*SCState)
    {
    case SC_POWER_ON:
        if (SC_ADPU->Header.INS == SC_GET_A2R)
        {
            if(F_HotReset == 0)
            {
                /* Smartcard intialization ------------------------------------------*/
                SC_Init(SC_InitCfg);
            }
            /* Reset Data from SC buffer -----------------------------------------*/
            for (i = 0; i < 40; i++)
            {
                SC_ATR_Table[i] = 0;
            }
            /* Reset SC_A2R Structure --------------------------------------------*/
            SC_A2R.TS = 0;
            SC_A2R.T0 = 0;
            for (i = 0; i < SETUP_LENGTH; i++)
            {
                SC_A2R.T[i] = 0;
            }
            for (i = 0; i < HIST_LENGTH; i++)
            {
                SC_A2R.H[i] = 0;
            }
            SC_A2R.Tlength = 0;
            SC_A2R.Hlength = 0;
            /* Next State --------------------------------------------------------*/
            *SCState = SC_RESET_LOW;
        }
        break;
    case SC_RESET_LOW:
        if(SC_ADPU->Header.INS == SC_GET_A2R)
        {
            /* If card is detected then Power ON, Card Reset and wait for an answer) */
            if (1)
            {
                while(((*SCState) != SC_POWER_OFF) && ((*SCState) != SC_ACTIVE))
                {
                    SC_AnswerReq(SCState, SC_ATR_Table, 40); /* Check for answer to reset */
                    log_info("SC_ATR_Table:");
                    for(i = 0; i < 32; i++)
                    {
                        log_info(" %x \r", SC_ATR_Table[i]);
                    }
                }
            }
            else
            {
                (*SCState) = SC_POWER_OFF;
            }
        }
        printf("\n");
        break;
    case SC_ACTIVE:
        if (SC_ADPU->Header.INS == SC_GET_A2R)
        {
            SC_decode_Answer2reset(SC_ATR_Table, 40);
            (*SCState) = SC_ACTIVE_ON_T0;
        }
        break;
    case SC_ACTIVE_ON_T0:
        SC_SendData(SC_ADPU, SC_Response);
        break;
    case SC_POWER_OFF:
        SC_DeInit(); /* Disable Smartcard interface */
        break;
    default:
        (*SCState) = SC_POWER_OFF;
    }
}
