==> qqclient/Terminal_T/Terminal/USER/smartcard.c <==
#include "smartcard.h"

void SC_Handler(SC_State *SCState, SC_ADPU_Commands *SC_ADPU, SC_ADPU_Responce *SC_Response)
{
    u32 i = 0;
    u8 temp_flag;

    switch(*SCState)
    {
    case SC_POWER_ON:
        if (SC_ADPU->Header.INS == SC_GET_A2R)
        {
            /* Smartcard intialization ------------------------------------------*/
            SC_Init();

            /* Reset Data from SC buffer -----------------------------------------*/
            for (i = 0; i < 40; i++)
            {
                SC_ATR_Table[i] = 0;
            }

            /* Reset SC_A2R Structure --------------------------------------------*/
            SC_A2R.TS = 0;
            SC_A2R.T0 = 0;
            for (i = 0; i < SETUP_LENGTH; i++)
            {
                SC_A2R.T[i] = 0;
            }
            for (i = 0; i < HIST_LENGTH; i++)
            {
                SC_A2R.H[i] = 0;
            }
            SC_A2R.Tlength = 0;
            SC_A2R.Hlength = 0;

            /* Next State --------------------------------------------------------*/
            *SCState = SC_RESET_LOW;
        }
        break;

    case SC_RESET_LOW:
        if(SC_ADPU->Header.INS == SC_GET_A2R)
        {
            while(((*SCState) != SC_POWER_OFF) && ((*SCState) != SC_ACTIVE))
            {
                temp_flag = PSAMInit_usart(&SC_ATR_Table[0], 40);
                if(temp_flag == 0x01)
                    *SCState = SC_ACTIVE;
                else
                    *SCState = SC_POWER_OFF;
                //SC_AnswerReq(SCState, &SC_ATR_Table[0], 40); /* Check for answer to reset */
            }
        }
        break;

    case SC_ACTIVE:
        if (SC_ADPU->Header.INS == SC_GET_A2R)
        {
            if(SC_decode_Answer2reset(&SC_ATR_Table[0]) == T0_PROTOCOL)
            {
                (*SCState) = SC_ACTIVE_ON_T0;
            }
            else
            {
                (*SCState) = SC_POWER_OFF;
            }
        }
        break;

    case SC_ACTIVE_ON_T0:
        //SC_SendData_yt(SC_ADPU, SC_Response);
        SC_SendData(SC_ADPU, SC_Response);
        break;

    case SC_POWER_OFF:
        SC_DeInit(); /* Disable Smartcard interface */
        break;

    default:
        (*SCState) = SC_POWER_OFF;
    }
}

void SC_Reset(BitAction ResetState)
{
    GPIO_WriteBit(GPIO_RESET, SC_RESET, ResetState);
}

void SC_ParityErrorHandler(void)
{
#ifdef RJMU101_UART
    USART_SendData(RJMU101_UART, SCData);
    while(USART_GetFlagStatus(RJMU101_UART, USART_FLAG_TC) == RESET)
    {
    }
#endif
}

void SC_PTSConfig(void)
{
#ifdef RJMU101_UART
    RCC_ClocksTypeDef RCC_ClocksStatus;
    u32 workingbaudrate = 0, apbclock = 0;
    u8 locData = 0, PTSConfirmStatus = 1;
    USART_InitTypeDef USART_InitStructure;
    USART_ClockInitTypeDef USART_ClockInitStructure;

    /* Reconfigure the USART Baud Rate -------------------------------------------*/
    RCC_GetClocksFreq(&RCC_ClocksStatus);
    apbclock = RCC_ClocksStatus.PCLK1_Frequency;
    apbclock /= ((RJMU101_UART->GTPR & (u16)0x00FF) * 2);

    /* Enable the DMA Receive (Set DMAR bit only) to enable interrupt generation
       in case of a framing error FE */
    USART_DMACmd(RJMU101_UART, USART_DMAReq_Rx, ENABLE);

    if((SC_A2R.T0 & (u8)0x10) == 0x10)
    {
        if(SC_A2R.T[0] != 0x11)
        {
            /* Send PTSS */
            SCData = 0xFF;
            USART_SendData(RJMU101_UART, SCData);
            while(USART_GetFlagStatus(RJMU101_UART, USART_FLAG_TC) == RESET)
            {
            }
            /* Send PTS0 */
            SCData = 0x10;
            USART_SendData(RJMU101_UART, SCData);
            while(USART_GetFlagStatus(RJMU101_UART, USART_FLAG_TC) == RESET)
            {
            }

            /* Send PTS1 */
            SCData = SC_A2R.T[0];
            USART_SendData(RJMU101_UART, SCData);
            while(USART_GetFlagStatus(RJMU101_UART, USART_FLAG_TC) == RESET)
            {
            }
            /* Send PCK */
            SCData = (u8)0xFF^(u8)0x10^(u8)SC_A2R.T[0];
            USART_SendData(RJMU101_UART, SCData);
            while(USART_GetFlagStatus(RJMU101_UART, USART_FLAG_TC) == RESET)
            {
            }
            /* Disable the DMA Receive (Reset DMAR bit only) */
            USART_DMACmd(RJMU101_UART, USART_DMAReq_Rx, DISABLE);

            if((USART_ByteReceive(&locData, SC_Receive_Timeout)) == SUCCESS)
            {
                if(locData != 0xFF)
                {
                    PTSConfirmStatus = 0x00;
                }
            }
            if((USART_ByteReceive(&locData, SC_Receive_Timeout)) == SUCCESS)
            {
                if(locData != 0x10)
                {
                    PTSConfirmStatus = 0x00;
                }
            }
            if((USART_ByteReceive(&locData, SC_Receive_Timeout)) == SUCCESS)
            {
                if(locData != SC_A2R.T[0])
                {
                    PTSConfirmStatus = 0x00;
                }
            }
            if((USART_ByteReceive(&locData, SC_Receive_Timeout)) == SUCCESS)
            {
                if(locData != ((u8)0xFF^(u8)0x10^(u8)SC_A2R.T[0]))
                {
                    PTSConfirmStatus = 0x00;
                }
            }
            else
            {
                PTSConfirmStatus = 0x00;
            }
            /* PTS Confirm */
            if(PTSConfirmStatus == 0x01)
            {
                workingbaudrate = apbclock * D_Table[(SC_A2R.T[0] & (u8)0x0F)];
                workingbaudrate /= F_Table[((SC_A2R.T[0] >> 4) & (u8)0x0F)];

                USART_ClockInitStructure.USART_Clock = USART_Clock_Enable;
                USART_ClockInitStructure.USART_CPOL = USART_CPOL_Low;
                USART_ClockInitStructure.USART_CPHA = USART_CPHA_1Edge;
                USART_ClockInitStructure.USART_LastBit = USART_LastBit_Enable;
                USART_ClockInit(RJMU101_UART, &USART_ClockInitStructure);

                USART_InitStructure.USART_BaudRate = workingbaudrate;
                USART_InitStructure.USART_WordLength = USART_WordLength_9b;
                USART_InitStructure.USART_StopBits = USART_StopBits_1_5;
                USART_InitStructure.USART_Parity = USART_Parity_Even;
                USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
                USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
                USART_Init(RJMU101_UART, &USART_InitStructure);
            }
        }
    }
#endif
}

unsigned char SC_AnswerReq(u8 *card, u8 length)
{
    u8 Data;
    //u8 card[40];
    u8 i;

    GPIO_WriteBit(GPIOB, GPIO_Pin_11, (BitAction)0);//set the rst to low

    for(i=0; i<length; i++)
        card[i] = 0x00;

    Data = 0x00;

    for(i=0; i<length; i++) //for delay
        Data = 0x00;

    GPIO_WriteBit(GPIOB, GPIO_Pin_11,(BitAction)1);//set the rst to high

    for (i = 0; i < length; i++)//get the atr
    {
        if((USART_ByteReceive(&Data, SC_Receive_Timeout)) == SUCCESS)
        {
            card[i] = Data;
        }
    }

    if(card[0])
    {
        return 1;
    }
    else
        return 0;
}

static void SC_Init(void)
{
#ifdef RJMU101_UART
    GPIO_InitTypeDef GPIO_InitStructure;
    USART_InitTypeDef USART_InitStructure;
    USART_ClockInitTypeDef USART_ClockInitStructure;

    /* Enable GPIO_3_5V, GPIORESET and GPIO_CMDVCC clocks */
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_AFIO | RJMU101_RCC_APB2Periph, ENABLE);

    /* Enable RJMU101_UART clock */
    RCC_APB1PeriphClockCmd(RJMU101_RCC_APB1Periph, ENABLE);

    /* Configure RJMU101_UART CK(PB.12) as alternate function push-pull */
    GPIO_InitStructure.GPIO_Pin = GPIO_Pin_12;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
    GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
    GPIO_Init(GPIOB, &GPIO_InitStructure);

    /* Configure RJMU101_UART Tx (PB.10) as alternate function open-drain */
    GPIO_InitStructure.GPIO_Pin = RJMU101_TX_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
    GPIO_Init(RJMU101_TX_PORT, &GPIO_InitStructure);

    /* Configure Smartcard Reset  */
    GPIO_InitStructure.GPIO_Pin = RJMU101_RX_PIN;
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
    GPIO_Init(RJMU101_RX_PORT, &GPIO_InitStructure);


    /* RJMU101_UART configuration ------------------------------------------------------*/
    /* RJMU101_UART configured as follow:
          - Word Length = 9 Bits
          - 0.5 Stop Bit
          - Even parity
          - BaudRate = 9677 baud
          - Hardware flow control disabled (RTS and CTS signals)
          - Tx and Rx enabled
          - USART Clock enabled
    */

    /* USART Clock set to 3.6 MHz (PCLK1 (36 MHZ) / 10) */
    USART_SetPrescaler(RJMU101_UART, 0x05);

    /* USART Guard Time set to 16 Bit */
    USART_SetGuardTime(RJMU101_UART, 16);

    USART_ClockInitStructure.USART_Clock = USART_Clock_Enable;
    USART_ClockInitStructure.USART_CPOL = USART_CPOL_Low;
    USART_ClockInitStructure.USART_CPHA = USART_CPHA_1Edge;
    USART_ClockInitStructure.USART_LastBit = USART_LastBit_Enable;
    USART_ClockInit(RJMU101_UART, &USART_ClockInitStructure);


    USART_InitStructure.USART_BaudRate = 9677;
    USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    USART_InitStructure.USART_StopBits = USART_StopBits_1_5;
    USART_InitStructure.USART_Parity = USART_Parity_Even;
    USART_InitStructure.USART_Mode = USART_Mode_Rx | USART_Mode_Tx;
    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_Init(RJMU101_UART, &USART_InitStructure);

    /* Enable the RJMU101_UART Parity Error Interrupt */
//  USART_ITConfig(RJMU101_UART, USART_IT_PE, ENABLE);

//  /* Enable the RJMU101_UART Framing Error Interrupt */
//  USART_ITConfig(RJMU101_UART, USART_IT_ERR, ENABLE);

    /* Enable RJMU101_UART */
    USART_Cmd(RJMU101_UART, ENABLE);

    /* Enable the NACK Transmission */
    USART_SmartCardNACKCmd(RJMU101_UART, ENABLE);

    /* Enable the Smartcard Interface */
    USART_SmartCardCmd(RJMU101_UART, ENABLE);

    /* Set RSTIN HIGH */
//  SC_Reset(Bit_SET);
#endif
}

static void SC_DeInit(void)
{
#ifdef RJMU101_UART
    /* Disable CMDVCC */
    SC_PowerCmd(ENABLE);

    /* Deinitializes the RJMU101_UART */
    USART_DeInit(RJMU101_UART);

    /* Deinitializes the GPIO_3_5V */
    GPIO_DeInit(GPIO_3_5V);

    /* Deinitializes the GPIO_RESET */
    GPIO_DeInit(GPIO_RESET);

    /* Deinitializes the GPIO_CMDVCC */
    GPIO_DeInit(GPIO_CMDVCC);

    /* Disable GPIO_3_5V, GPIO_RESET and GPIO_CMDVCC clocks */
    RCC_APB2PeriphClockCmd(RCC_APB2Periph_3_5V | RCC_APB2Periph_RESET
                           | RCC_APB2Periph_CMDVCC, DISABLE);

    /* Disable RJMU101_UART clock */
    RCC_APB1PeriphClockCmd(RJMU101_RCC_APB1Periph, DISABLE);

#endif
}

static ErrorStatus USART_ByteReceive(u8 *Data, u32 TimeOut)
{
#ifdef RJMU101_UART
    u32 Counter = 0;

    while((USART_GetFlagStatus(RJMU101_UART, USART_FLAG_RXNE) == RESET) && (Counter != TimeOut))
    {
        Counter++;
    }

    if(Counter != TimeOut)
    {
        *Data = (u8)USART_ReceiveData(RJMU101_UART);
        return SUCCESS;
    }
    else
    {
        return ERROR;
    }
#else
    return ERROR;
#endif
}
